--- a/.github/workflows/ARMv8-ImmortalWrt.yml
+++ b/.github/workflows/ARMv8-ImmortalWrt.yml
@@ -120,7 +120,7 @@ jobs:
       if: (!cancelled())
       uses: ophub/flippy-openwrt-actions@main
       env:
-        OPENWRT_ARMVIRT: https://github.com/Jejz168/OpenWrt/releases/download/ARMv8-ROOTFS-IMMO/immortalwrt-armsr-armv8-generic-rootfs.tar.gz
+        OPENWRT_ARMVIRT: https://github.com/${{ github.repository }}/releases/download/ARMv8-ROOTFS-IMMO/immortalwrt-armsr-armv8-generic-rootfs.tar.gz
         PACKAGE_SOC: ${{ github.event.inputs.openwrt_soc }}
         WHOAMI: Jejz
         OPENWRT_VER: R$(TZ=UTC-8 date +'%y.%-m.%-d') 
@@ -198,7 +198,7 @@ jobs:
           内容: ${{ env.commit }}
           hash: ${{ env.hash }}
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
-          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.PRODUCT_NAME }}-IMMO
+          📍: https://github.com/${{ github.repository }}/releases/tag/${{ env.PRODUCT_NAME }}-IMMO
 
     - name: Push notification
       uses: xhnmt/pushplus-action@main
@@ -216,4 +216,4 @@ jobs:
           内容: ${{ env.commit }}
           hash: ${{ env.hash }}
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
-          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.PRODUCT_NAME }}-IMMO
+          📍: https://github.com/${{ github.repository }}/releases/tag/${{ env.PRODUCT_NAME }}-IMMO
