更新 Build_ARMv8-Lede_1806.yml

--- a/.github/workflows/Build_ARMv8-Lede_1806.yml
+++ b/.github/workflows/Build_ARMv8-Lede_1806.yml
@@ -542,17 +542,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Delete workflow runs
-      uses: Jejz168/delete-workflow-runs@main
+      uses: GitRML/delete-workflow-runs@main
       with:
-        retain_days: 7
+        retain_days: 30
         keep_minimum_runs: 8
 
     - name: Remove old Releases
-      uses: Jejz168/delete-older-releases@master
+      uses: dev-drprasad/delete-older-releases@master
       if: env.UPLOAD_RELEASE == 'true' 
       with:
         keep_latest: 68
         delete_tags: true
         delete_tag_pattern: _
       env:
-        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
