更新 Build_X86_64-Lede个人双开版.yml

--- a/.github/workflows/Build_X86_64-Lede个人双开版.yml
+++ b/.github/workflows/Build_X86_64-Lede个人双开版.yml
@@ -387,7 +387,7 @@ jobs:
           内容: ${{ env.commit }}
           hash: ${{ env.hash }}
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
-          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}_L1806Personal_${{ env.KERNEL }}
+          📍: https://github.com/${{ github.repository }}/releases/tag/${{ env.TAG }}_L1806Personal_${{ env.KERNEL }}
 
     - name: Push notification upload success
       uses: xhnmt/pushplus-action@main
@@ -405,7 +405,7 @@ jobs:
           内容: ${{ env.commit }}
           hash: ${{ env.hash }}
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
-          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}_L1806Personal_${{ env.KERNEL }}
+          📍: https://github.com/${{ github.repository }}/releases/tag/${{ env.TAG }}_L1806Personal_${{ env.KERNEL }}
 # //////////////////////////////////////////////////////////////////////////////////////////////
   Build_x86_64_2305_515:
     needs: [Checka]
@@ -705,7 +705,7 @@ jobs:
           内容: ${{ env.commit }}
           hash: ${{ env.hash }}
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
-          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}_L2305Personal_${{ env.KERNEL }}
+          📍: https://github.com/${{ github.repository }}/releases/tag/${{ env.TAG }}_L2305Personal_${{ env.KERNEL }}
 
     - name: Push notification upload success
       uses: xhnmt/pushplus-action@main
@@ -723,4 +723,4 @@ jobs:
           内容: ${{ env.commit }}
           hash: ${{ env.hash }}
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
-          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}_L2305Personal_${{ env.KERNEL }}
+          📍: https://github.com/${{ github.repository }}/releases/tag/${{ env.TAG }}_L2305Personal_${{ env.KERNEL }}
