更新 Update synchronization checker.yml

--- a/.github/workflows/Update synchronization checker.yml
+++ b/.github/workflows/Update synchronization checker.yml
@@ -78,7 +78,7 @@ jobs:
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
-        github_token: ${{ secrets.GH_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
                     
     - name: Telegram notification upload success
       uses: appleboy/telegram-action@master
