更新 Build_X86_64-ImmortalWrt.yml

--- a/.github/workflows/Build_X86_64-ImmortalWrt.yml
+++ b/.github/workflows/Build_X86_64-ImmortalWrt.yml
@@ -1416,3 +1416,24 @@ jobs:
           hash: ${{ env.hash }}
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
           📍: https://github.com/${{ github.repository }}/releases/tag/${{ env.TAG }}_immoD_${{ env.KERNEL }}
+# //////////////////////////////////////////////////////////////////////////////////////////////
+  Cleaning:
+    if: ${{ always() }}
+    needs: [Checka,Build_x86_64,Build_x86_64_2410,Build_x86_64_515,Build_x86_64_docker]
+    runs-on: ubuntu-latest
+    steps:
+    - name: Delete workflow runs
+      uses: GitRML/delete-workflow-runs@main
+      with:
+        retain_days: 30
+        keep_minimum_runs: 8
+
+    - name: Remove old Releases
+      uses: dev-drprasad/delete-older-releases@master
+      if: env.UPLOAD_RELEASE == 'true' 
+      with:
+        keep_latest: 68
+        delete_tags: true
+        delete_tag_pattern: _
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
