更新 ARMv8-ImmortalWrt.yml

--- a/.github/workflows/ARMv8-ImmortalWrt.yml
+++ b/.github/workflows/ARMv8-ImmortalWrt.yml
@@ -147,7 +147,7 @@ jobs:
         allowUpdates: true
         removeArtifacts: true
         tag: ${{ env.PRODUCT_NAME }}-IMMO
-        token: ${{ secrets.GH_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
         body: |
           **This is ImmortalWrt Firmware for ${{ env.FILE_NAME }}**
           ### 📒 固件信息
