--- a/.github/workflows/ARMv8-Lede.yml
+++ b/.github/workflows/ARMv8-Lede.yml
@@ -148,7 +148,7 @@ jobs:
         allowUpdates: true
         removeArtifacts: true
         tag: ${{ env.PRODUCT_NAME }}
-        token: ${{ secrets.GH_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
         body: |
           **This is LEDE Firmware for ${{ env.FILE_NAME }}**
           ### 📒 固件信息
