更新 Build_ARMv8-Lede_1806.yml

--- a/.github/workflows/Build_ARMv8-Lede_1806.yml
+++ b/.github/workflows/Build_ARMv8-Lede_1806.yml
@@ -328,7 +328,7 @@ jobs:
         allowUpdates: true
         removeArtifacts: true
         tag: ${{ env.FILE_NAME }}
-        token: ${{ secrets.GH_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
         body: |
           **This is LEDE Firmware for ${{ env.FILE_NAME }}**
           ### 📒 固件信息
@@ -465,7 +465,7 @@ jobs:
         allowUpdates: true
         removeArtifacts: true
         tag: ${{ env.PRODUCT_NAME }}
-        token: ${{ secrets.GH_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
         body: |
           **This is LEDE Firmware for ${{ env.FILE_NAME }}**
           ### 📒 固件信息
