更新 Build_X86_64-Lede_2305.yml

--- a/.github/workflows/Build_X86_64-Lede_2305.yml
+++ b/.github/workflows/Build_X86_64-Lede_2305.yml
@@ -421,8 +421,8 @@ jobs:
       with:
         name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」[LEDE-2305]固件
         allowUpdates: true
-        tag: ${{ env.TAG }}-2305_${{ env.KERNEL }}
-        token: ${{ secrets.GH_TOKEN }}
+        tag: ${{ env.TAG }}_2305_${{ env.KERNEL }}
+        token: ${{ secrets.GITHUB_TOKEN }}
         body: |
           **This is LEDE-2305 Firmware for ${{ env.FILE_NAME }}**
           **homeproxy/Nikki**
@@ -737,8 +737,8 @@ jobs:
         name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」[LEDE-2305]固件
         allowUpdates: true
         removeArtifacts: true
-        tag: ${{ env.TAG }}-2305_${{ env.KERNEL }}
-        token: ${{ secrets.GH_TOKEN }}
+        tag: ${{ env.TAG }}_2305_${{ env.KERNEL }}
+        token: ${{ secrets.GITHUB_TOKEN }}
         body: |
           **This is LEDE-2305 Firmware for ${{ env.FILE_NAME }}**
           **homeproxy/Nikki**
@@ -1051,8 +1051,8 @@ jobs:
         name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」[LEDE-2305]固件
         allowUpdates: true
         removeArtifacts: true
-        tag: ${{ env.TAG }}-2305_${{ env.KERNEL }}
-        token: ${{ secrets.GH_TOKEN }}
+        tag: ${{ env.TAG }}_2305_${{ env.KERNEL }}
+        token: ${{ secrets.GITHUB_TOKEN }}
         body: |
           **This is LEDE-2305 Firmware for ${{ env.FILE_NAME }}**
           **homeproxy/Nikki**
@@ -1369,8 +1369,8 @@ jobs:
         name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」[LEDE-2305]固件
         allowUpdates: true
         removeArtifacts: true
-        tag: ${{ env.TAG }}-2305_${{ env.KERNEL }}
-        token: ${{ secrets.GH_TOKEN }}
+        tag: ${{ env.TAG }}_2305_${{ env.KERNEL }}
+        token: ${{ secrets.GITHUB_TOKEN }}
         body: |
           **This is LEDE-2305 Firmware for ${{ env.FILE_NAME }}**
           **homeproxy/Nikki**
