--- a/.github/workflows/Build_X86_64-Lede_Docker.yml
+++ b/.github/workflows/Build_X86_64-Lede_Docker.yml
@@ -345,7 +345,7 @@ jobs:
         allowUpdates: true
         removeArtifacts: true
         tag: ${{ env.TAG }}_L1806D_${{ env.KERNEL }}
-        token: ${{ secrets.GH_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
         body: |
           **This is LEDE-1806 Firmware for ${{ env.FILE_NAME }}**
           ### 📒 固件信息
