更新 Build_X86_64-ImmortalWrt.yml

--- a/.github/workflows/Build_X86_64-ImmortalWrt.yml
+++ b/.github/workflows/Build_X86_64-ImmortalWrt.yml
@@ -1037,7 +1037,7 @@ jobs:
         name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」[ImmortalWrt]固件
         allowUpdates: true
         removeArtifacts: true
-        tag: ${{ env.TAG }}_immo_${{ env.KERNEL }}
+        tag: ${{ env.TAG }}_immo515_${{ env.KERNEL }}
         token: ${{ secrets.GITHUB_TOKEN }}
         body: |
           **This is ImmortalWrt Firmware for ${{ env.FILE_NAME }}**
