--- a/.github/workflows/Update synchronization checker.yml
+++ b/.github/workflows/Update synchronization checker.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@main
       with:
-        token: ${{ secrets.GH_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
         
     - name: Initialization environment
       env:
