--- a/.github/workflows/Build-immo-toolchain.yml
+++ b/.github/workflows/Build-immo-toolchain.yml
@@ -8,8 +8,9 @@ on:
     inputs:
       checkupdates:
         description: 'Checkupdates connection to Actions'
-        required: false
-        default: 'false'
+        required: true
+        default: false
+        type: boolean
   #schedule:
   #  - cron: 16 17 * * *
 
