--- a/.github/workflows/Build_X86_64-OpenWrt.yml
+++ b/.github/workflows/Build_X86_64-OpenWrt.yml
@@ -727,7 +727,7 @@ jobs:
         name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」[OpenWrt]固件
         allowUpdates: true
         removeArtifacts: true
-        tag: ${{ env.TAG }}_op2410_${{ env.KERNEL }}
+        tag: ${{ env.TAG }}_op_${{ env.KERNEL }}
         token: ${{ secrets.GITHUB_TOKEN }}
         body: |
           **This is OpenWrt Firmware for ${{ env.FILE_NAME }}**
@@ -775,7 +775,7 @@ jobs:
           内容: ${{ env.commit }}
           hash: ${{ env.hash }}
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
-          📍: https://github.com/${{ github.repository }}/releases/tag/${{ env.TAG }}_op2410_${{ env.KERNEL }}
+          📍: https://github.com/${{ github.repository }}/releases/tag/${{ env.TAG }}_op_${{ env.KERNEL }}
           
     - name: Push notification upload success
       uses: xhnmt/pushplus-action@main
@@ -793,7 +793,7 @@ jobs:
           内容: ${{ env.commit }}
           hash: ${{ env.hash }}
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
-          📍: https://github.com/${{ github.repository }}/releases/tag/${{ env.TAG }}_op2410_${{ env.KERNEL }}
+          📍: https://github.com/${{ github.repository }}/releases/tag/${{ env.TAG }}_op_${{ env.KERNEL }}
 # /////////////////////////////////////////////////////////////////////////////////////////////////////////
   Build_x86_64_515:
     needs: [Checka,job_init]
@@ -1039,7 +1039,7 @@ jobs:
         name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」[OpenWrt]固件
         allowUpdates: true
         removeArtifacts: true
-        tag: ${{ env.TAG }}_op515_${{ env.KERNEL }}
+        tag: ${{ env.TAG }}_op_${{ env.KERNEL }}
         token: ${{ secrets.GITHUB_TOKEN }}
         body: |
           **This is OpenWrt Firmware for ${{ env.FILE_NAME }}**
