--- a/.github/workflows/Build_X86_64-ImmortalWrt.yml
+++ b/.github/workflows/Build_X86_64-ImmortalWrt.yml
@@ -726,7 +726,7 @@ jobs:
         name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」[ImmortalWrt]固件
         allowUpdates: true
         removeArtifacts: true
-        tag: ${{ env.TAG }}_immo2410_${{ env.KERNEL }}
+        tag: ${{ env.TAG }}_immo_${{ env.KERNEL }}
         token: ${{ secrets.GITHUB_TOKEN }}
         body: |
           **This is ImmortalWrt Firmware for ${{ env.FILE_NAME }}**
@@ -774,7 +774,7 @@ jobs:
           内容: ${{ env.commit }}
           hash: ${{ env.hash }}
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
-          📍: https://github.com/${{ github.repository }}/releases/tag/${{ env.TAG }}_immo2410_${{ env.KERNEL }}
+          📍: https://github.com/${{ github.repository }}/releases/tag/${{ env.TAG }}_immo_${{ env.KERNEL }}
           
     - name: Push notification upload success
       uses: xhnmt/pushplus-action@main
@@ -792,7 +792,7 @@ jobs:
           内容: ${{ env.commit }}
           hash: ${{ env.hash }}
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
-          📍: https://github.com/${{ github.repository }}/releases/tag/${{ env.TAG }}_immo2410_${{ env.KERNEL }}
+          📍: https://github.com/${{ github.repository }}/releases/tag/${{ env.TAG }}_immo_${{ env.KERNEL }}
 # /////////////////////////////////////////////////////////////////////////////////////////////////////////
   Build_x86_64_515:
     needs: [Checka,job_init]
@@ -1037,7 +1037,7 @@ jobs:
         name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 」[ImmortalWrt]固件
         allowUpdates: true
         removeArtifacts: true
-        tag: ${{ env.TAG }}_immo515_${{ env.KERNEL }}
+        tag: ${{ env.TAG }}_immo_${{ env.KERNEL }}
         token: ${{ secrets.GITHUB_TOKEN }}
         body: |
           **This is ImmortalWrt Firmware for ${{ env.FILE_NAME }}**
