--- a/config/openwrt_config/x86-docker.config
+++ b/config/openwrt_config/x86-docker.config
@@ -5437,6 +5437,7 @@ CONFIG_PACKAGE_libopenssl=y
 # Build Options
 #
 CONFIG_OPENSSL_OPTIMIZE_SPEED=y
+# CONFIG_OPENSSL_KTLS is not set
 CONFIG_OPENSSL_WITH_ASM=y
 CONFIG_OPENSSL_WITH_DEPRECATED=y
 # CONFIG_OPENSSL_NO_DEPRECATED is not set
@@ -9456,7 +9457,6 @@ CONFIG_PACKAGE_ucode-mod-lua=y
 # CONFIG_PACKAGE_ufp-neigh is not set
 # CONFIG_PACKAGE_ugps is not set
 # CONFIG_PACKAGE_uhubctl is not set
-# CONFIG_PACKAGE_uledd is not set
 # CONFIG_PACKAGE_unetmsg is not set
 # CONFIG_PACKAGE_unix2dos is not set
 # CONFIG_PACKAGE_unshare is not set
